fix: error handling, fix some database errors